--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
 
         <meta name="description" content="Personal website and portfolio.">
-        <meta name="keywords" content="Pierfrancesco, Soffritti, pierfrancescosoffritti, personal website, portfolio, OneCalculator, Shuffly">
-        <meta name="author" content="Pierfrancesco Soffritti">
+        <meta name="keywords" content="Thomas Ong, personal website, portfolio, AI, Galaxy">
+        <meta name="author" content="Thomas Ong">
 
         <meta name="google-site-verification" content="QYxU4tPWRqYfP-gS2PBU0Uoqw9JXqOnotw9c8uoKg8k" />
 
@@ -14,17 +14,27 @@
 
         <!-- social stuff -->
 
-        <meta property="og:title" content="Pierfrancesco Soffritti">
+        <meta property="og:title" content="Thomas Ong">
 		<meta property="og:description" content="Personal website and portfolio.">
 		<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-website-5dadd.appspot.com/o/favicon.png?alt=media&token=4f064031-cfb1-499b-9d03-24fc0255b0f4">
-		<meta property="og:url" content="https://pierfrancescosoffritti.com/">
+		<meta property="og:url" content="https://fgame.com/">
 		<meta name="twitter:card" content="summary">
 
         <!--  Non-Essential, But Recommended -->
 
-		<meta property="og:site_name" content="Pierfrancesco Soffritti">
-        <meta name="twitter:image:alt" content="Pierfrancesco Soffritti">
+		<meta property="og:site_name" content="Thomas Ong">
+        <meta name="twitter:image:alt" content="Thomas Ong">
         <!-- social stuff -->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146475036-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-146475036-1');
+        </script>
 
         <!--
         manifest.json provides metadata used when your web app is added to the
@@ -43,11 +53,11 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Pierfrancesco Soffritti</title>
+        <title>Thomas Ong</title>
     </head>
     <body>
         <noscript>
-            Pierfrancesco Soffritti personal website and portfolio.<br/>
+            Thomas Ong personal website and portfolio.<br/>
             You need to enable JavaScript to run this app.
         </noscript>
         <div id="root"></div>
@@ -62,8 +72,8 @@
         {
           "@context": "http://schema.org",
           "@type": "Person",
-          "name": "Pierfrancesco Soffritti",
-          "url": "https://pierfrancescosoffritti.com/",
+          "name": "Thomas Ong",
+          "url": "https://fgame.com/",
           "sameAs": [
             "https://www.facebook.com/pierfrancesco.soffritti",
             "https://instagram.com/pierfrancesco.soffritti/",
@@ -72,5 +82,5 @@
           ]
         }
     </script>
-    
+
 </html>
